--- a/第三方登录相关文档.md
+++ b/第三方登录相关文档.md
@@ -7,3 +7,5 @@
 4. [聊一聊JWT与session](https://juejin.im/post/5a437441f265da43294e54c3)
 
 5. [JSON Web Token 入门教程](http://www.ruanyifeng.com/blog/2018/07/json_web_token-tutorial.html)
+
+6.[RESTful API风格基于Token的鉴权机制分析(与JWT结合)](https://mingshan.fun/2017/12/19/restful-api-token/)
