--- a/ffmpeg/基本操作.md
+++ b/ffmpeg/基本操作.md
@@ -9,7 +9,7 @@ $ ffmpeg -i input.avi output.mp4
 2. 查看视频文件的元信息，比如编码格式和比特率，可以只使用-i参数
 
 ```
-$ ffmpeg -i input.mp4
+$ ffmpeg -i input.mp4 -hide_banner
 ```
 
 3. 转换编码格式（transcoding）指的是， 将视频文件从一种编码转成另一种编码。比如转成 H.264 编码
