--- a/ffmpeg/基本操作.md
+++ b/ffmpeg/基本操作.md
@@ -26,4 +26,36 @@ $ ffmpeg -i input.mp4 -c copy output.webm
 
 上面例子中，只是转一下容器，内部的编码格式不变，所以使用-c copy指定直接拷贝，不经过转码，这样比较快。
 
+5. 提取音频
+
+```
+$ ffmpeg -i input.mp4 -vn -c:a copy output.aac
+```
+
+上面例子中，-vn表示去掉视频，-c:a copy表示不改变音频编码，直接拷贝。
+
+6. 添加音轨
+
+添加音轨（muxing）指的是，将外部音频加入视频，比如添加背景音乐或旁白。
+
+```
+$ ffmpeg -i input.aac -i input.mp4 output.mp4
+```
+
+有音频和视频两个输入文件，FFmpeg 会将它们合成为一个文件。
+
+7. 剪辑
+
+裁剪（cutting）指的是，截取原始视频里面的一个片段，输出为一个新视频。可以指定开始时间（start）和持续时间（duration），也可以指定结束时间（end）。
+
+```
+$ ffmpeg -ss [start] -i [input] -to [end] -c copy [output]
+```
+
+```
+$ ffmpeg -ss 00:00:00 -i [input] -to 00:01:00 -c copy [output]
+```
+
+上面例子中，-c copy表示不改变音频和视频的编码格式，直接拷贝，这样会快很多。
+
 [参考文档](http://www.ruanyifeng.com/blog/2020/01/ffmpeg.html)
