合并视频,修复时间轴,访问U盘

--- a/ffmpeg/基本操作.md
+++ b/ffmpeg/基本操作.md
@@ -49,13 +49,36 @@ $ ffmpeg -i input.aac -i input.mp4 output.mp4
 裁剪（cutting）指的是，截取原始视频里面的一个片段，输出为一个新视频。可以指定开始时间（start）和持续时间（duration），也可以指定结束时间（end）。
 
 ```
+$ ffmpeg -ss [start] -to [duration] -i [input] -c copy [output]
+```
+
+```
 $ ffmpeg -ss [start] -i [input] -to [end] -c copy [output]
 ```
+试验后觉得这条end时间点总是失效变为持续时间，所以用第一条比较好
 
 ```
 $ ffmpeg -ss 00:00:00 -i [input] -to 00:01:00 -c copy [output]
 ```
 
 上面例子中，-c copy表示不改变音频和视频的编码格式，直接拷贝，这样会快很多。
+
+8. 合并
+
+FFmpeg concat 分离器
+
+这种方法成功率很高，也是最好的，但是需要 FFmpeg 1.1 以上版本。先创建一个文本文件filelist.txt：
+
+file 'input1.mkv'
+file 'input2.mkv'
+file 'input3.mkv'
+
+然后：
+
+```
+ffmpeg -f concat -i filelist.txt -c copy output.mkv
+```
+
+注意：使用 FFmpeg concat 分离器时，如果文件名有奇怪的字符，要在 filelist.txt中转义。
 
 [参考文档](http://www.ruanyifeng.com/blog/2020/01/ffmpeg.html)
