--- a/爬虫/基础.md
+++ b/爬虫/基础.md
@@ -22,3 +22,5 @@ for content in content_list:
 [参考文档1](https://zhuanlan.zhihu.com/p/35324806)
 
 [scrapy文档](https://scrapy-chs.readthedocs.io/zh_CN/0.24/intro/tutorial.html)
+
+[Crawlab](https://juejin.im/post/5c7f9014f265da2d9d1cd34b)
