--- a/Linux/统计文件夹下文件数目等.md
+++ b/Linux/统计文件夹下文件数目等.md
@@ -1,6 +1,6 @@
 1. 动态打印nginx日志
 
-    ```$ sudo tail -f /var/log/nginx/access.log```
+    ```$ sudo tail -200f /var/log/nginx/access.log```
 
 2. 显示文件内容（静态）
 
