--- a/mdnice开发经过/一文多发思否社区之请求.md
+++ b/mdnice开发经过/一文多发思否社区之请求.md
@@ -20,3 +20,5 @@ return：draft_id
 请求：https://gateway.segmentfault.com/article
 类型：post
 body：{"tags":[1040000000089449],"title":"二进制中 1 的个数","text":"\n## 题目链接\n\n[剑指 Offer 15. 二进制中 1 的个数](https://leetcode-cn.com/problems/er-jin-zhi-zhong-1de-ge-shu-lcof/)","draft_id":1220000039823499,"blog_id":"0","type":1,"url":"","cover":"/img/bVcRf5d","license":null,"log":""}
+
+4. 发布后的文章编辑
