--- a/mdnice开发经过/一文多发数据库表设计.md
+++ b/mdnice开发经过/一文多发数据库表设计.md
@@ -5,3 +5,7 @@
 3. 平台发布记录表：用户id， outid，平台id，实际的配置项信息，第几次发布，货币动态id，（draft_id类似这种中间值)
 
 图片转换如果不支持是否存map(老图片，新图片)；
+
+1. platform：id, item_id（平台发布商品id）, ad_item_id（去广告商品id）, is_available(平台是否可用）, name, logo
+2. platform_option:  id, user_id, platform_id, auth（认证信息） ,feature, default_option（默认配置）, times（发布批次）
+3. platform_record: id, user_id, out_id, coin_action_id, platform_id, option（实际配置）, times（发布批次）, feature(中间值）,has_ad(是否有广告）
