--- a/mdnice开发经过/平台标签列表.md
+++ b/mdnice开发经过/平台标签列表.md
@@ -19,3 +19,143 @@ c++(1040000000089741),golang(1040000000090203),}
 
 工具()
 {git(1040000000089459),github(1040000000091226),}
+
+{"后端":"后端","前端":"前端","人工智能":"人工智能","移动端开发":"移动端","数学":"数据库","设计":"运维","文学":"java","阅读":"java","工具介绍":"工具","其他":"其他"}
+
+{
+                "javascript": 1040000000089436,
+                "前端": 1040000000089899,
+                "vue.js": 1040000004003243,
+                "css": 1040000000089434,
+                "html": 1040000000089571,
+                "html5": 1040000000089409,
+                "node.js": 1040000000089918,
+                "react.js": 1040000002893277,
+                "jquery": 1040000000089733,
+                "css3": 1040000000090141,
+                "es6": 1040000000363835,
+                "typescript": 1040000000365394,
+                "chrome": 1040000000089407,
+                "npm": 1040000000090688,
+                "bootstrap": 1040000000091210,
+                "sass": 1040000000091262,
+                "less": 1040000000090600,
+                "chrome-devtools": 1040000003984684,
+                "angular": 1040000002766916,
+                "firefox": 1040000000090217,
+                "coffeescript": 1040000000161068,
+                "safari": 1040000000089499,
+                "postman": 1040000002690568,
+                "postcss": 1040000002784849,
+                "yarn": 1040000000583426,
+                "fiddler": 1040000000089526,
+                "webkit": 1040000000089501,
+                "firebug": 1040000000090480,
+                "edge": 1040000003067932,
+                "php": 1040000000089387,
+                "java": 1040000000089449,
+                "node.js": 1040000000089918,
+                "python": 1040000000089534,
+                "c++": 1040000000089741,
+                "golang": 1040000000090203,
+                "c": 1040000000089457,
+                "后端": 1040000000391379,
+                "spring": 1040000000090103,
+                "springboot": 1040000002981698,
+                "django": 1040000000089564,
+                "flask": 1040000000125263,
+                "c#": 1040000000089581,
+                "swoole": 1040000000578968,
+                "ruby": 1040000000089699,
+                "asp.net": 1040000000090433,
+                "ruby-on-rails": 1040000000089646,
+                "scala": 1040000000090228,
+                "rust": 1040000000311191,
+                "lavarel": 1040000003049523,
+                "爬虫": 1040000000090133,
+                "java": 1040000000089449,
+                "android": 1040000000089658,
+                "ios": 1040000000089442,
+                "objective-c": 1040000000090209,
+                "小程序": 1040000007092442,
+                "react-native": 1040000002645080,
+                "swift": 1040000000531223,
+                "xcode": 1040000000089579,
+                "android-studio": 1040000000410239,
+                "flutter": 1040000014898996,
+                "webapp": 1040000000090825,
+                "kotlin": 1040000000325397,
+                "mysql": 1040000000089439,
+                "redis": 1040000000089431,
+                "sql": 1040000000090049,
+                "数据库": 1040000000089846,
+                "mongodb": 1040000000089488,
+                "json": 1040000000090043,
+                "elasticsearch": 1040000000250111,
+                "nosql": 1040000000089432,
+                "memcached": 1040000000089873,
+                "postgresql": 1040000000090861,
+                "sqlite": 1040000000090354,
+                "mariadb": 1040000000170195,
+                "linux": 1040000000089392,
+                "nginx": 1040000000090145,
+                "docker": 1040000000366352,
+                "apache": 1040000000089761,
+                "运维": 1040000000185642,
+                "centos": 1040000000090249,
+                "ubuntu": 1040000000090245,
+                "服务器": 1040000000089496,
+                "负载均衡": 1040000000090107,
+                "ssh": 1040000000089688,
+                "容器": 1040000000188366,
+                "vagrant": 1040000000264345,
+                "jenkins": 1040000002947862,
+                "devops": 1040000000614898,
+                "debian": 1040000000090250,
+                "fabric": 1040000000186340,
+                "算法": 1040000000089524,
+                "机器学习": 1040000000089788,
+                "人工智能": 1040000000089791,
+                "深度学习": 1040000000483243,
+                "数据挖掘": 1040000000089829,
+                "tensorflow": 1040000003984725,
+                "神经网络": 1040000000636902,
+                "人脸识别": 1040000000452537,
+                "图像识别": 1040000003494685,
+                "自然语言处理": 1040000000356023,
+                "机器人": 1040000000090534,
+                "pytorch": 1040000017332394,
+                "自动驾驶": 1040000000396073,
+                "git": 1040000000089459,
+                "github": 1040000000091226,
+                "macos": 1040000000260425,
+                "visual-studio-code": 1040000002720957,
+                "windows": 1040000000089709,
+                "vim": 1040000000089467,
+                "sublime-text": 1040000000126097,
+                "intellij-idea": 1040000000090560,
+                "phpstorm": 1040000000316188,
+                "eclipse": 1040000000089509,
+                "webstorm": 1040000000349928,
+                "编辑器": 1040000000089484,
+                "svn": 1040000000089447,
+                "visual-studio": 1040000000090231,
+                "pycharm": 1040000000090615,
+                "emacs": 1040000000090216,
+                "程序员": 1040000000089556,
+                "http": 1040000000089706,
+                "segmentfault": 1040000000089399,
+                "https": 1040000000090541,
+                "安全": 1040000000090533,
+                "websocket": 1040000000179330,
+                "restful": 1040000000090858,
+                "xss": 1040000000089427,
+                "区块链": 1040000004890636,
+                "graphql": 1040000002997432,
+                "csrf": 1040000000090270,
+                "rpc": 1040000000484827,
+                "比特币": 1040000000343451,
+                "以太坊": 1040000010675360,
+                "udp": 1040000000089941,
+                "智能合约": 1040000010675369,
+}
