--- a/mdnice开发经过/平台标签列表.md
+++ b/mdnice开发经过/平台标签列表.md
@@ -159,3 +159,17 @@ c++(1040000000089741),golang(1040000000090203),}
                 "udp": 1040000000089941,
                 "智能合约": 1040000010675369,
 }
+
+{
+ "platformPublishDTOList": [
+         { "platformId":1,"outId":"1","type":"","tags":"java","title":"hello world","text":"想回到过去，试着让故事继续","auth":"{\"token\":\"8afd3f2591224f34a7b72651eb1b0fe4\"}","feature":"","option":"","times":1,"hasAd":1}
+       ]
+}
+
+{
+"platformOptionsList":[
+{
+"platformId":1,"auth":"{'token':'8afd3f2591224f34a7b72651eb1b0fe4'}","feature":""
+}
+]
+}
