--- a/mdnice开发经过/平台标签列表.md
+++ b/mdnice开发经过/平台标签列表.md
@@ -161,15 +161,32 @@ c++(1040000000089741),golang(1040000000090203),}
 }
 
 {
- "platformPublishDTOList": [
-         { "platformId":1,"outId":"1","type":"","tags":"java","title":"hello world","text":"想回到过去，试着让故事继续","auth":"{\"token\":\"8afd3f2591224f34a7b72651eb1b0fe4\"}","feature":"","option":"","times":1,"hasAd":1}
-       ]
+    "categoryId": 1,
+  "html": "<section id=\"nice\" data-tool=\"mdnice编辑器\" data-website=\"https://www.mdnice.com\" style=\"font-size: 16px; color: black; padding: 0 10px; line-height: 1.6; word-spacing: 0px; letter-spacing: 0px; word-break: break-word; word-wrap: break-word; text-align: left; font-family: Optima-Regular, Optima, PingFangSC-light, PingFangTC-light, 'PingFang SC', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;\"><figure data-tool=\"mdnice编辑器\" style=\"margin: 0; margin-top: 10px; margin-bottom: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;\"><figcaption style=\"margin-top: 5px; text-align: center; color: #888; font-size: 14px;\">1</figcaption></figure>\n<figure data-tool=\"mdnice编辑器\" style=\"margin: 0; margin-top: 10px; margin-bottom: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;\"><figcaption style=\"margin-top: 5px; text-align: center; color: #888; font-size: 14px;\">20</figcaption></figure>\n</section>",
+  "outId": 1,
+  "tagId": 2,
+  "themeId": 6,
+  "title": "故事的小黄花,咿呀咿呀哟12131213",
+  "platformId":[
+    1
+  ],
+ "text":"想回到过去，试着让故事继续",
+ "hasAd":0
 }
 
 {
 "platformOptionsList":[
 {
-"platformId":1,"auth":"{'token':'8afd3f2591224f34a7b72651eb1b0fe4'}","feature":""
+"platformId":1,"auth":"{'token':'d47f596e24aa474eda54b0330b9eb77b'}","feature":""
 }
 ]
 }
+
+{
+  platformOptionsList:[{
+    platformId:1,
+    auth:{"token":}
+  }]
+}
+
+
