--- a/mdnice开发经过/平台标签列表.md
+++ b/mdnice开发经过/平台标签列表.md
@@ -177,7 +177,7 @@ c++(1040000000089741),golang(1040000000090203),}
 {
 "platformOptionsList":[
 {
-"platformId":1,"auth":"{'token':'d47f596e24aa474eda54b0330b9eb77b'}","feature":""
+"platformId":1,"auth":"d47f596e24aa474eda54b0330b9eb77b","feature":""
 }
 ]
 }
