fix file upload request

--- a/mdnice开发经过/博客园请求调研.md
+++ b/mdnice开发经过/博客园请求调研.md
@@ -24,4 +24,7 @@ GET
 图片上传
 https://upload.cnblogs.com/imageuploader/processupload
 POST
+request: form-data:
+1. host:www.cnblogs.com
+2. qqfile: file
 response:{"success":true,"message":"https://img2020.cnblogs.com/blog/2465176/202107/2465176-20210716223817356-598959415.png"}
