--- a/hellobuluo开发经过/广深杭地区互选失败的人（不含退费和免费的，纯付费的用户）.md
+++ b/hellobuluo开发经过/广深杭地区互选失败的人（不含退费和免费的，纯付费的用户）.md
@@ -10,3 +10,7 @@ and a.member_id not in
 广州：440100
 深圳：440300
 杭州：330100
+
+互选成功的用户
+select mid from hello_member where id in (
+select DISTINCT member_id from select_action where select_activity_id=3 and select_status=4)
